# ardop2

./: .editorconfig  LICENSE  README.md
ardop_description/: CMakeLists.txt  README.md  package.xml  urdf.rviz
ardop_description/ardop_description_01/: CMakeLists.txt  package.xml
ardop_description/ardop_description_01/launch/: display.launch  gazebo.launch
ardop_description/ardop_description_01/meshes/: end_effector_link.STL  lower_1_link.STL  shoulder_1_link.STL  upper_1_link.STL  upper_2_link.STL  wheel_front_left_link.STL
ardop_description/ardop_description_01/urdf/: ardop_description_01.urdf
ardop_description/ardop_description_02/: package.xml
ardop_description/ardop_description_02/launch/: gazebo.launch
ardop_description/ardop_description_02_experimental/: package.xml  urdf.rviz
ardop_description/config/: gazebo_controllers.yaml  joint_names.yaml  joint_names_ardop_description.yaml  position_controllers.yaml  trajectory_controllers.yaml
ardop_description/launch/: display.launch  gazebo.launch  gazebo_controllers.launch  position_controllers.launch  rviz.launch  trajectory_controllers.launch
ardop_description/meshes/: chassis_link.STL  ee_pitch_link.STL  ee_roll_link.STL  end_effector_link.STL  lower_1_link.STL  lower_2_link.STL  measure_volume.py  shoulder_1_link.STL  upper_1_link.STL  wheel_back_left_link.STL  wheel_back_right_link.STL  wheel_front_left_link.STL  wheel_front_right_link.STL
ardop_description/urdf/: ardop.gv  ardop_description.dae  ardop_description.rounded.dae  ardop_description.urdf  ardop_ikfast_3dof.cpp
ardop_talk/: speech.py  (+1 more)
(+212 files in other folders)
